Layout: Test fix for Contact form vertical overflow display bug on small desktop

--- a/src/index.css
+++ b/src/index.css
@@ -1855,6 +1855,7 @@ Modal
 
   .modal-container.modal-container__application-form.modal-container__contact-form {
     height: 75vh;
+    min-height: 560px;
   }
 }
 
